[package]
name = "rosetta-server-astar"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Astar rosetta server."

[dependencies]
anyhow = "1.0"
async-std = { version = "1.12.0", features = ["tokio1"] }
async-trait = "0.1"
ethers = "2.0.7"
futures = { version = "0.3", default-features = false, features = ["std"] }
futures-util = "0.3"
hex = "0.4.3"
log = "0.4"
parity-scale-codec = "3.6"
rosetta-config-astar = { version = "0.4.0", path = "../config" }
rosetta-config-ethereum = { version = "0.4.0", path = "../../ethereum/config" }
rosetta-core = { version = "0.4.0", path = "../../../rosetta-core" }
rosetta-server = { version = "0.4.0", path = "../../../rosetta-server", default-features = false, features = ["ws", "webpki-tls"] }
rosetta-server-ethereum = { version = "0.4.0", path = "../../ethereum/server" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp-core = { version = "21.0", default-features = false, features = ["blake2", "std"] }
sp-keyring = "24.0"
subxt = { version = "0.31", default-features = false, features = ["substrate-compat"] }
tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
ethers-solc = "2.0.1"
rosetta-client = { version = "0.4.0", path = "../../../rosetta-client" }
rosetta-docker = { version = "0.4.0", path = "../../../rosetta-docker", features = ["tests"] }
sha3 = "0.10.6"
