[package]
name = "rosetta-server-astar"
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Astar rosetta server."

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
ethers = "2.0"
futures = { version = "0.3", default-features = false, features = ["std"] }
hex = "0.4"
log = "0.4"
parity-scale-codec = { workspace = true, features = ["derive"] }
rosetta-config-astar.workspace = true
rosetta-config-ethereum.workspace = true
rosetta-core.workspace = true
rosetta-server = { workspace = true, features = ["ws", "webpki-tls"] }
rosetta-server-ethereum.workspace = true
serde.workspace = true
serde_json.workspace = true
sp-core = { version = "21.0", default-features = false, features = ["blake2", "std"] }
sp-keyring = "24.0"
subxt = { workspace = true, features = ["substrate-compat"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
ethers-solc = "2.0"
rosetta-client.workspace = true
rosetta-docker = { workspace = true, features = ["tests"] }
sha3 = "0.10"
