[package]
name = "rosetta-server-astar"
version = "0.6.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Astar rosetta server."

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = { version = "0.3", default-features = false, features = ["std"] }
futures-util = "0.3"
hex = "0.4"
log = "0.4"
parity-scale-codec = { workspace = true, features = ["derive"] }
rosetta-config-astar = { workspace = true, features = ["astar-metadata"] }
rosetta-config-ethereum.workspace = true
rosetta-core.workspace = true
rosetta-server = { workspace = true, features = ["webpki-tls"] }
rosetta-server-ethereum.workspace = true
serde.workspace = true
serde_json.workspace = true
sp-keyring.workspace = true
subxt = { workspace = true, features = ["substrate-compat"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
alloy-primitives = { version = "0.8" }
alloy-sol-types = { version = "0.8" }
ethers-solc = "2.0"
rosetta-client.workspace = true
rosetta-docker = { workspace = true, features = ["tests"] }
sha3 = "0.10"
