[package]
name = "rosetta-tx-astar"
version = "0.2.5"
edition = "2021"
description = "Astar transaction builder."
repository = "https://github.com/analog-labs/chain-connectors"
license = "MIT"

[dependencies]
anyhow = "1.0.69"
blake2-rfc = "0.2.18"
bs58 = "0.4.0"
parity-scale-codec = { version = "3.4.0", features = ["derive"] }
rosetta-config-astar = { version = "0.2.5", path = "../config" }
rosetta-core = { version = "0.2.5", path = "../../../rosetta-core" }
serde_json = "1.0.94"
