[package]
name = "rosetta-server-bitcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
async-std = { version = "1.12.0", features = ["tokio1"] }
async-trait = "0.1.64"
bitcoincore-rpc-async = "3.0.1"
hex = "0.4.3"
rosetta-config-bitcoin = { version = "0.1.0", path = "../config" }
rosetta-server = { version = "0.1.0", path = "../../../rosetta-server" }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
rosetta-server = { version = "0.1.0", path = "../../../rosetta-server", features = ["tests"] }
