[package]
name = "rosetta-server-bitcoin"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Bitcoin rosetta server."

[dependencies]
anyhow = "1.0"
async-std = { version = "1.12.0", features = ["tokio1"] }
async-trait = "0.1"
bitcoincore-rpc-async = "3.0.1"
hex = "0.4.3"
rosetta-config-bitcoin = { version = "0.4.0", path = "../config" }
rosetta-server = { version = "0.4.0", path = "../../../rosetta-server" }
serde_json = "1.0"
tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
rosetta-server = { version = "0.4.0", path = "../../../rosetta-server", features = ["tests"] }
