[package]
name = "rosetta-server-bitcoin"
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Bitcoin rosetta server."

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bitcoincore-rpc-async = "3.0"
hex = "0.4"
rosetta-config-bitcoin.workspace = true
rosetta-core.workspace = true
serde_json = "1.0"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
void = "1.0"

[dev-dependencies]
rosetta-docker = { workspace = true, features = ["tests"] }
