[package]
name = "rosetta-config-ethereum"
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Ethereum configuration."

[dependencies]
anyhow = "1.0"
derivative = { version = "2.2", default-features = false, features = ["use_core"] }
hex-literal = { version = "0.4" }
rosetta-config-astar = { workspace = true }
rosetta-core.workspace = true
rosetta-ethereum-types = { workspace = true }

# optional dependencies
parity-scale-codec = { workspace = true, features = ["derive", "bytes"], optional = true }
scale-info = { version = "2.9", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
hex-literal = { version = "0.4" }
serde_json = { version = "1.0" }

[features]
default = ["std", "serde", "scale-info", "scale-codec"]
std = [
  "dep:thiserror",
  "serde?/std",
  "parity-scale-codec?/std",
  "rosetta-ethereum-types/std",
]
serde = [
  "dep:serde",
  "rosetta-ethereum-types/serde",
]
scale-info = [
  "dep:scale-info",
  "rosetta-ethereum-types/with-codec",
]
scale-codec = [
  "dep:parity-scale-codec",
  "rosetta-ethereum-types/with-codec",
]
