[package]
name = "rosetta-config-ethereum"
version = "0.6.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Ethereum configuration."

[dependencies]
anyhow = "1.0"
const-hex = { version = "1.9", default-features = false, features = ["alloc"] }
derivative = { version = "2.2", default-features = false, features = ["use_core"] }
hex-literal = { version = "0.4" }
rosetta-config-astar = { workspace = true }
rosetta-core.workspace = true
rosetta-ethereum-types = { workspace = true, features = ["with-rlp"] }
static_assertions = "1.1.0"

# optional dependencies
parity-scale-codec = { workspace = true, features = ["derive", "bytes"], optional = true }
scale-info = { version = "2.9", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
hex-literal = { version = "0.4" }
serde_json = { version = "1.0" }

[features]
default = ["std", "serde", "scale-info", "scale-codec", "rosetta-ethereum-types/with-crypto"]
std = [
  "dep:thiserror",
  "const-hex/std",
  "serde?/std",
  "parity-scale-codec?/std",
  "rosetta-ethereum-types/std",
]
serde = [
  "dep:serde",
  "const-hex/serde",
  "rosetta-ethereum-types/serde",
]
scale-info = [
  "dep:scale-info",
  "rosetta-ethereum-types/with-codec",
]
scale-codec = [
  "dep:parity-scale-codec",
  "rosetta-ethereum-types/with-codec",
]
# Include a default implementation for keccak256 and ecrecover functions
# You may want to disable this feature if you want to use a custom implementation
default-crypto = [
  "rosetta-ethereum-types/with-crypto",
]
