[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[features]
default = ["sputnik-vm"]
sputnik-vm = ["rosetta-ethereum-executor/sputnik-evm"]
rust-vm = ["rosetta-ethereum-executor/rust-evm"]

[dependencies]
async-trait = "0.1"
ethers-solc = { version = "2.0", features = ["async", "project-util"] }
eyre = "0.6"
hex-literal = "0.4"
inkwell = { version = "0.2.0", features = ["target-webassembly", "no-libffi-linking", "llvm15-0"] }
jsonrpsee = { version = "0.20", default-features = false, features = ["macros", "client"] }
rosetta-ethereum-executor = { version = "0.1.0", path = "../executor", default-features = false, features = ["jsonrpsee"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log", "parking_lot"] }
url = "2.4.0"

# anvil = { git = "https://github.com/foundry-rs/foundry.git", rev = "dee41819c6e6bd1ea5419c613d226498ed7a2c59" }

# [patch.crates-io]
# foundry-block-explorers = { git = "https://github.com/foundry-rs/block-explorers.git", rev = "5cbf6d32fa1ba39bc06a0d2b6202a021b3b8f0ff" }
# foundry-common = { version = "0.2.0", git = "https://github.com/foundry-rs/foundry.git", rev = "dee41819c6e6bd1ea5419c613d226498ed7a2c59" }
# anvil = { git = "https://github.com/foundry-rs/foundry.git", rev = "dee41819c6e6bd1ea5419c613d226498ed7a2c59" }
