[package]
name = "playground"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Ethereum integration tests."

[features]
default = ["sputnik-vm"]
sputnik-vm = ["rosetta-ethereum-executor/sputnik-evm"]
rust-vm = ["rosetta-ethereum-executor/rust-evm"]

[dependencies]
async-trait = "0.1"
ethers-solc = { version = "2.0", features = ["async", "project-util"] }
eyre = "0.6"
hex-literal = "0.4"
inkwell = { version = "0.2.0", features = ["target-webassembly", "no-libffi-linking", "llvm15-0"] }
jsonrpsee = { version = "0.20", default-features = false, features = ["macros", "client"] }
rosetta-ethereum-executor = { workspace = true, features = ["jsonrpsee"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log", "parking_lot"] }
url = "2.4.0"
