[package]
name = "rosetta-ethereum-primitives"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Ethereum Connector Primitives"

[dependencies]
bytes = { package = "bytes", version = "1.5", default-features = false }
const-hex = { version = "1.9", default-features = false, features = ["alloc"] }
ethereum = { version = "0.15", default-features = false }
ethereum-types = { version = "0.14", default-features = false, features = ["num-traits"] }

parity-scale-codec = { workspace = true, features = ["derive", "bytes"], optional = true }
scale-info = { version = "2.9", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
thiserror = { version = "1.0", optional = true }

[features]
default = ["std"]
with-codec = [
  "parity-scale-codec",
  "scale-info",
  "ethereum/with-codec",
  "ethereum-types/codec",
  "ethereum-types/scale-info",
]
with-serde = ["serde", "ethereum/with-serde", "ethereum-types/serialize"]
std = [
  "bytes/std",
  "const-hex/std",
  "ethereum/std",
  "ethereum-types/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "serde/std",
  "thiserror",
]
