[package]
name = "rosetta-ethereum-primitives"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/analog-labs/chain-connectors"
description = "Ethereum Connector Primitives"

[dependencies]
bytes = { package = "bytes", version = "1.5", default-features = false }
const-hex = { version = "1.9", default-features = false, features = ["alloc"] }
ethbloom = { version = "0.13", default-features = false }
primitive-types = { version = "0.12", default-features = false, features = ["byteorder", "rustc-hex", "num-traits"] }
uint = { version = "0.9", default-features = false }

fixed-hash = { version = "0.8", default-features = false, features = ["byteorder", "rustc-hex"] }
impl-codec-macro = { package = "impl-codec", version = "0.6", default-features = false, optional = true }
impl-num-traits = { version = "0.1", default-features = false }
impl-rlp-macro = { package = "impl-rlp", version = "0.3", default-features = false, optional = true }
impl-serde-macro = { package = "impl-serde", version = "0.4", default-features = false, optional = true }

parity-scale-codec = { workspace = true, features = ["derive", "bytes"], optional = true }
scale-info = { version = "2.9", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
thiserror = { version = "1.0", optional = true }

[features]
default = ["std"]
with-codec = [
  "dep:parity-scale-codec",
  "dep:scale-info",
  "dep:impl-codec-macro",
  "ethbloom/codec",
  "primitive-types/codec",
  "primitive-types/scale-info",
]
with-serde = [
  "dep:serde",
  "dep:impl-serde-macro",
  "ethbloom/serialize",
  "primitive-types/serde_no_std",
]
with-rlp = [
  "dep:impl-rlp-macro",
  "ethbloom/rlp",
  "primitive-types/rlp",
]
std = [
  "bytes/std",
  "const-hex/std",
  "ethbloom/std",
  "primitive-types/std",
  "uint/std",
  "fixed-hash/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "serde/std",
  "thiserror",
]
